# sciprog-FW

./: .gitignore  README.md  REPORT.md  config.yaml  context.md  environment.yml  packages.txt  pyproject.toml  requirements-pf.txt  requirements.txt  ty.toml
.agents/rules/: rulesgameoflifeproject.md
.agents/workflows/: workflowsgameoflifeproject.md
data/: initial.pkl  ipc.csv
libs/: benchmarking.py  config.py  logger.py  logging_config.py
libs/core/: engine.py  grid.py  rules.py
libs/gui/: app.py  controls.py  views.py
libs/parallel/: dispatch.py  shared_grid.py  topology.py  workers.py
libs/patterns/: catalog.py  detector.py  stability.py
libs/persistence/: database.py
notebooks/: performance_analysis.ipynb  titanic-plotly-express-eda.ipynb
scripts/: generate_initial_state.py  run_base.py  run_ethanol.py  run_extract_papers.py  run_extract_persona.py  run_extract_recipe.py  run_game_of_life.py  run_game_of_life_numpy.py  run_iris.py  run_iris_profiling.py  run_main.py  run_pdf2md.py  run_prefect_cache_tasks.py  run_prefect_primes_tasks.py  run_prefect_simple_tasks.py  run_primes_multiprocessing.py  run_prophet.py  run_prophet_ipc.py  run_scrapling_ucn.py  run_scrapy_ucn.py  run_spacy.py  run_sqlalchemy.py  run_sqlite.py  run_sympy.py  run_train_iris_rf.py  run_web_iris_rf.py
src/game_of_life/: benchmarking.py  cli.py  config.py  logging_config.py
src/game_of_life/core/: engine.py  grid.py  rules.py
src/game_of_life/gui/: app.py  controls.py  views.py
tests/: test_patterns.py  test_persistence.py  test_rules.py  test_stability.py
(+10 files in other folders)
