[project]
name = "game_of_life"
version = "0.1.0"
description = "Conway's Game of Life"
requires-python = "==3.13.14"
dependencies = [
    "numpy==2.5.0",
    "scipy==1.18.0",
    "SQLAlchemy==2.0.51",
    "PyYAML==6.0.3",
    "dearpygui==2.3.1",
    "typeguard==4.5.2",
    "coloredlogs==15.0.1",
    "humanize==4.16.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
ignore = ["D100", "D104", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.13"
strict = true
